Development
    More work on the ASX parser to handle XMLish URLs and not break
    Fix ASX parser to increment the entry pointer when we encounter a entry tag
        This used for single ASX files where the entry entity contains several
        ref tags all pointing to the same content
    Fix ASX parser to handle entryrefs which basically is a url to another 
        asx file that contains the same media at different sites (mirrors)
    If the local version of the url is requested but not found then use the url as the source
    Handle request for "Next" item off the playlist differently
    Implement ASX parser and extract the ASX fields out
    Switch from using dbus_connection_setup_with_g_main to 
        using our own dbus dispatcher but only when we can't connect to 
        g_main_loop. Fixes some trailers in Opera and in Firefox
    Create autobuilding spec file
    Fix doc location
    Make quicktime autohref urls work
    Version bump
0.0.4
    Fix looping problem and initialization
    Mark cancelled player as not ready
    Marked cancelled items as not opened
    Fix problem with request_*_value methods using wrong dest
    Handle Cancel signal from player
    Change request calls to use unique (based on controlid) object names
    Remove unnecessary glib flushes
    Trap several instance = NULL cases
    Fix problem where window is destroyed immediately
    Fix NULL pointer problem in several places
    Put xpt files in place that browser can find them
    Bump version
    Make Apple HD trailers cache properly
    When sending command, check for control id on item and then use instance
    Handle "filename" embed tag
    Implement GetLoop, SetLoop and loop embed tag methods
    Implement GetMIMEType JS Method
    Fix problem when starting an hrefid and over cache
0.0.3   Mar 12, 2007
    Fix up install issues
    Switch to using controlid when using GNOME MPlayer allows control of hidden windows
    Fix infinite loop problem when hidden=true